<resources>
    <string name="app_name">Task App</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="save_task">Save Task</string>

    <string name="open_todo">To do</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="text_no_todo">There are no tasks to do</string>
    <string name="text_no_completed">There are no tasks to complete</string>
    <string name="completed_todo">Completed</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="description">Description</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="remove_button">remove button</string>
    <string name="edit_button">edit button</string>
    <string name="complete_button">complete button</string>
    <string name="todo_removal">Todo removal</string>
    <string name="want_to_remove">Do you want to remove this task?</string>
    <string name="confirm_remove">remove</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>
    <string name="todo_list">Todo List</string>
    <string name="create_account">Create Account</string>
    <string name="enter_your_full_name">Enter your full name</string>
    <string name="enter_your_e_mail">Enter your e-mail</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="sign_in">Sign in</string>
    <string name="log_off">Log off</string>
    <string name="dont_have_an_account_create_one">Don\'t have an account? Create Account</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="person_found_with_success">Person found with success</string>
    <string name="person_not_found">Person not found</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="enter_a_valid_email">Enter a valid email</string>
    <string name="sync_notification_title">Syncing tasks</string>
    <string name="sync_notification_getting_started">Getting started</string>
    <string name="sync_notification_syncing">Syncing tasks</string>
    <string name="sync_notification_finishing">Finishing sync</string>
    <string name="tasks_synced_with_success">Tasks synced with success</string>
    <string name="wasnt_possible_to_sync_tasks">It wasn\'t possible to sync tasks</string>
    <string name="sync_notification_retrieving_updated_tasks">Retrieving updated tasks</string>
    <string name="sync_internet_connection_required">Synchronization failed. Internet connection required</string>
    <string name="speak_task_description">Speak the task\'s description</string>
    <string name="add_widget">Add widget</string>
    <string name="authentication_needed">Sign in the application before using the widget</string>
    <string name="text_to_speech">text to speech</string>
    <string name="add_task">Add Task</string>
    <string name="more_options">More options</string>
    <string name="due_date">Due date</string>
    <string name="upload_image">Upload image</string>
    <string name="add_images_to_your_task">Add images to your task</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="wait_before_trying_again">Wait a few seconds before trying again</string>
    <string name="modal_collapse_title">Do you want to collapse More Options?</string>
    <string name="modal_collapse_message">By collapsing More Options, all the data inside of it will be erased</string>
    <string name="modal_collapse_button_collapse">Collapse</string>
    <string name="cannot_add_more_images_to_task">You cannot add more Images to this task</string>
    <string name="modal_remove_media_title">Do you want to remove this image</string>
    <string name="modal_remove_media_message">Are you sure you want to remove this image?</string>
    <string name="modal_remove_media_button_remove">Remove</string>
    <string name="date_not_set">Date not set</string>
    <string name="time_to_complete_a_task">Time to complete a task!</string>
    <string name="there_is_a_task_that_needs_your_attention">There is a task that needs your attention</string>
    <string name="alarm_notification_setting_alarms">Setting Alarms</string>
    <string name="description_is_required">Description is required</string>
    <string name="sync_tasks">Sync tasks</string>
    <string name="loading">loading</string>
    <string name="open_the_app_to_add_tasks">Open the app to add tasks</string>
</resources>
