<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/fragment_open_tasks">


    <fragment
        android:id="@+id/fragment_open_tasks"
        android:name="com.gabriel.taskapp.view.OpenTaskListFragment"
        android:label="@string/todo_list"
        tools:layout="@layout/fragment_open_task_list">
    </fragment>

    <fragment
        android:id="@+id/fragment_completed_tasks"
        android:name="com.gabriel.taskapp.view.CompletedTaskListFragment"
        android:label="@string/completed_todo"
        tools:layout="@layout/fragment_completed_task_list">
    </fragment>

    <fragment
        android:id="@+id/fragment_settings"
        android:name="com.gabriel.taskapp.view.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings">
    </fragment>

</navigation>