<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:paddingVertical="18dp"
    android:layout_marginVertical="2dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/button_complete_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/complete_button"
        android:src="@drawable/ic_baseline_check_box_24"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/text_description"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:tint="@color/success" />

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:text="@string/open_todo"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/button_complete_task"
        app:layout_constraintHorizontal_weight="7"
        app:layout_constraintLeft_toRightOf="@+id/button_complete_task"
        app:layout_constraintRight_toLeftOf="@id/button_remove_task"
        app:layout_constraintTop_toTopOf="@id/button_complete_task" />

    <ImageView
        android:id="@+id/button_remove_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/remove_button"
        android:src="@drawable/ic_baseline_delete_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/text_description"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/text_description"
        app:layout_constraintRight_toLeftOf="@id/button_edit_task"
        app:layout_constraintTop_toTopOf="@id/text_description"
        app:tint="@color/danger" />

    <ImageView
        android:id="@+id/button_edit_task"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/edit_button"
        android:src="@drawable/ic_baseline_edit_24"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/button_remove_task"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button_remove_task"
        app:layout_constraintRight_toLeftOf="@id/button_task_menu"
        app:layout_constraintTop_toTopOf="@id/button_remove_task"
        app:tint="@color/warning" />


    <ImageView
        android:id="@+id/button_task_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/complete_button"
        android:src="@drawable/ic_baseline_more_vert_24"
        app:layout_constraintBottom_toBottomOf="@id/button_edit_task"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintLeft_toRightOf="@+id/button_edit_task"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_edit_task" />

</androidx.constraintlayout.widget.ConstraintLayout>

