<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        tools:context=".view.TaskListFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_todo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yale_blue">

            <TextView
                android:id="@+id/text_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/open_todo"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todo_open_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/text_no_todo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingVertical="25dp"
            android:paddingHorizontal="16dp"
            android:text="@string/text_no_todo"
            android:textSize="16sp"
            android:visibility="gone" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/view_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/yale_blue">

            <TextView
                android:id="@+id/text_completed_todo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/completed_todo"
                android:textAllCaps="true"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/todo_completed_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view_completed" />

        <TextView
            android:id="@+id/text_no_completed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:paddingHorizontal="16dp"
            android:text="@string/text_no_completed"
            android:textSize="16sp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
