<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".view.TaskFormActivity">

    <TextView
        android:id="@+id/text_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint_edit_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/text_description"
        app:layout_constraintRight_toRightOf="@+id/text_description"
        app:layout_constraintTop_toBottomOf="@+id/text_description">

        <EditText
            android:id="@+id/edit_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_the_description"
            android:inputType="textMultiLine"
            app:layout_constraintHorizontal_weight="7"
            app:layout_constraintLeft_toLeftOf="@+id/constraint_edit_description"
            app:layout_constraintRight_toLeftOf="@+id/speech_to_text_button"
            app:layout_constraintTop_toTopOf="@+id/constraint_edit_description" />

        <ImageView
            android:id="@+id/speech_to_text_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_baseline_mic_24"
            app:layout_constraintBottom_toBottomOf="@+id/edit_description"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toRightOf="@+id/edit_description"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/middle_blue_green"
        android:gravity="center"
        android:text="@string/save_task"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>