<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/background_gradient"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_gravity="center_vertical"
        android:layout_height="wrap_content"
        tools:context=".view.SignInActivity">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_view_sign_in_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:textColor="@color/grey"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/image_view_sign_in_logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />


        <ImageView
            android:id="@+id/image_view_sign_in_logo"
            android:layout_width="0dp"
            android:layout_height="100dp"
            app:tint="@color/grey"
            android:src="@drawable/ic_baseline_library_add_check_24"
            app:layout_constraintBottom_toTopOf="@id/text_layout_sign_in_email"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="@id/text_view_sign_in_title"
            app:layout_constraintRight_toRightOf="@id/text_view_sign_in_title"
            app:layout_constraintTop_toBottomOf="@id/text_view_sign_in_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_sign_in_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textColorHint="@color/grey"
            app:startIconTint="@color/grey"
            android:hint="@string/enter_your_e_mail"
            app:endIconContentDescription="@string/text_to_speech"
            app:layout_constraintBottom_toTopOf="@id/text_layout_sign_in_password"
            app:layout_constraintLeft_toLeftOf="@id/image_view_sign_in_logo"
            app:layout_constraintRight_toRightOf="@id/image_view_sign_in_logo"
            app:layout_constraintTop_toBottomOf="@id/image_view_sign_in_logo"
            app:startIconDrawable="@drawable/ic_baseline_email_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_field_sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/grey"
                android:inputType="text" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_layout_sign_in_password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:textColorHint="@color/grey"
            app:startIconTint="@color/grey"
            app:endIconTint="@color/grey"
            app:endIconMode="password_toggle"
            app:layout_constraintBottom_toTopOf="@id/button_sign_in"
            app:layout_constraintLeft_toLeftOf="@id/text_layout_sign_in_email"
            app:layout_constraintRight_toRightOf="@id/text_layout_sign_in_email"
            app:layout_constraintTop_toBottomOf="@id/text_layout_sign_in_email"
            app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text_field_sign_in_password"
                android:layout_width="match_parent"
                android:textColor="@color/grey"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:backgroundTint="@color/yale_blue"
            android:text="@string/sign_in"
            app:layout_constraintBottom_toBottomOf="@id/text_dont_have_an_account_create_account"
            app:layout_constraintLeft_toLeftOf="@id/text_layout_sign_in_password"
            app:layout_constraintRight_toRightOf="@id/text_layout_sign_in_password"
            app:layout_constraintTop_toBottomOf="@id/text_layout_sign_in_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/text_dont_have_an_account_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account_create_one"
            android:textColor="@color/grey"
            android:textAlignment="center"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="@id/button_sign_in"
            app:layout_constraintRight_toRightOf="@id/button_sign_in"
            app:layout_constraintTop_toBottomOf="@id/button_sign_in" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>